@@ -1,3 +1,12 @@
+2024-08-08  Ulrich Müller  <ulm@gentoo.org>
+
+	* test/ebuild-mode-tests.el:
+	* test/glep-mode-tests.el: New files, introducing tests.
+	* ebuild-mode.el (ebuild-mode-collect-and-split): Make it visible
+	at load time for tests.
+	* Makefile (TESTS, BYTECOMPFLAGS): New variables.
+	(check): New target.
+
 2024-08-07  Ulrich Müller  <ulm@gentoo.org>
 
 	* ebuild-mode.el (ebuild-mode-unescape-string): New function,
